	- added scripts/assembly_hub_generator.pl
	- added scripts/bam_quality_stat.pl
	- added scripts/Tutorial_pipeline00.pl
	- added scripts/Tutorial_pipeline01.pl
	- added scripts/Tutorial_pipeline02.pl
	- added scripts/Tutorial_pipeline03.pl
	- added scripts/track_hub_constructor.pl
	- renamed Bio::ViennaNGS.pm to Bio::ViennaNGS::Util.pm
	- migrated BAM specific code from Bio::ViennaNGS::Util 
	  to Bio::ViennaNGS::Bam
	- migrated expression/normalization code from Bio::ViennaNGS::Util
	  to Bio::ViennaNGS::Expression
	- refactored scripts/normalize_multicov.pl
	- removed scripts/motiffinda.pl from distribution
	- added static templates for the Assembly and Track Hub generator
	- updated POD and README 

0.13 Thu Feb 14 2015
	- fixed an issue in Bio::ViennaNGS::FeatureChain
	- updated POD

0.14 Tue Feb 24 2015
	- updated mkdircheck() 
	- updated rmdircheck()
	- fixed directory creation in bam_split.pl
	- updated POD in Tutorials

0.15 Mon Jul 6 2015
	- fixed path creation in bed_or_bam2bw()
	- fixed scalar initialization bug
        - fixed bug in Bio::ViennaNGS::BamStat
	- scripts/bam_to_bigwig.pl can now produce normalized bigWigs
	- added functionality to compute RPKM in Bio::ViennaNGS::Expression
	- added tests for UCSC.pm
	- added tests for SpliceJunc.pm

0.16 Tue Oct 27 2015
	- added Bio::ViennaNGS::FeatureInterval
	- added Bio::ViennaNGS::BedGraphLine
	- added Bio::ViennaNGS::Peak
	- make Bio::ViennaNGS::MinimalFeature subclass of
	  Bio::ViennaNGS::FeatureInterval
	- added scripts/rnaseq_peakfinder.pl
	- added scripts/bed2nt2aa.pl
	- updated POD and README

0.17_01
	- changed output format in scripts/bed2nt2aa.pl to csv
	- implemented correct handling of unmapped reads in
	  Bio::ViennaNGS::Bam
	- replace '~' with $HOME in mkdircheck() within
          Bio::ViennaNGS::Util
	- fixed output path creation in rnaseq_peakfinder.pl,
	  splice_site_summary.pl
	- refactored scripts/bam_uniq.pl
	- refactored scripts/bed2nt2aa.pl
